--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,26 @@
 * {
   font-family: "poppins";
 }
+body {
+  background-color: orangered;
+}
+.navbar {
+  background-color: orangered;
+}
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+  scrollbar-width: none;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 .pokemon-card {
-  width: 250px;
-  margin: 12px;
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   transition: transform 0.2s ease-in-out;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
 }
-
 .pokemon-card:hover {
   transform: scale(1.05);
 }
-
-.poki-data {
-  width: 100%;
-}
-
-.poki-name {
-  margin-bottom: 10px;
-}
-
-.poki-type {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-  margin-bottom: 10px;
-}
-
 .type-badge {
   background-color: rgba(255, 255, 255, 0.7);
   padding: 5px 10px;
@@ -52,64 +34,22 @@
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
   padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-.navbar {
-  background-color: #F08030;
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.icon-image {
-  height: 48px;
-  margin: 8px 24px;
+@media only screen and (max-width: 600px){
+	.type-badge {
+    font-size: 10px;
+  }
+  .poki-image {
+    padding: 8px;
+    margin-left: 50px;
+    width: 90px;
+    margin-top: 2px;
+  }
+  .poki-image img {
+    height: 55px;
+    justify-content: end;
+  }
 }
-
-.heading h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #ffffff;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-}
-
-.search-container {
-  position: relative;
-  margin-top: 16px;
-  width: 100%;
-  max-width: 400px;
-  height: 48px;
-}
-
-.search-input {
-  width: 100%;
-  height: 100%;
-  border-radius: 24px;
-  padding-left: 40px;
-  padding-right: 16px;
-  font-size: 1rem;
-  outline: none;
-  border: none;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
-}
-
-.search-input:focus {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.search-icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-  color: #888888;
-}
-
 
 
